--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 </li>
 <li id="fn5" class="footnote-item"><p>A sentiment I see a lot: &quot;Aligning AI to human values would be bad actually, because current human values are bad.&quot; To be honest, [glances at a history textbook] I 80% agree. It's not enough to make an AI act <em>human</em>, it's got to act <em>humane.</em> <a href="#fnref5" class="footnote-backref">↩︎</a></p>
 </li>
-<li id="fn6" class="footnote-item"><p>Maybe 50 years from now, in the genetically-modified cyborg future, calling compassion a &quot;humane&quot; value might sound as quaintly species-ist <a href="#fnref6" class="footnote-backref">↩︎</a></p>
+<li id="fn6" class="footnote-item"><p>Maybe 50 years from now, in the genetically-modified cyborg future, calling compassion &quot;humane&quot; might sound quaintly species-ist. <a href="#fnref6" class="footnote-backref">↩︎</a></p>
 </li>
 <li id="fn7" class="footnote-item"><p>The fancy jargon for these problems are, respectively: a) &quot;Specification gaming&quot;, b) &quot;Instrumental convergence&quot;. These will be explained in Part 2! <a href="#fnref7" class="footnote-backref">↩︎</a></p>
 </li>
