--- a/p1/index.html
+++ b/p1/index.html
@@ -1082,6 +1082,7 @@ All fascinating research directions, but none of them are the clear winner, yet.
 <p>Fire, <em>controlled</em>, can cook your food &amp; keep you warm.</p>
 <p>The first sparks of powerful AI are flying.</p>
 <p><em>Can we control what we've made?</em></p>
+<img alt="Robot Catboy & Ham the Human sitting around a laptop on fire. Ham's roasting a marshmallow over it." src="../media/p1/fire.png" style="border:none; width:100%;"/>
 <hr>
 <h3>🤔 Review #8 (last one!)</h3>
 <orbit-reviewarea color="violet">
