a bunch of tiny fixes

--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,7 @@ h1,h2,h3{
 <p>Meow!</p>
 <p><span style="color:#ff4040">Allowing HTML?</span></p>
 <p>What about feetnotes?<sup class="footnote-ref"><a href="#fn1" id="fnref1">[1]</a></sup></p>
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="Who's widely considered the founder of Computer Science & Artificial Intelligence?"
         answer="Alan Turing (this handsome fella)"
