--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ Nick Zandbergen,
 Nila Palmo Ram,
 Pixelglide,
 py660,
-River Lewis,
+rivques,
 Samuel Cottrell,
 Samuel Fernandez,
 Saran Wagner,
