--- a/p1/index.html
+++ b/p1/index.html
@@ -1424,7 +1424,7 @@ Nick Zandbergen,
 Nila Palmo Ram,
 Pixelglide,
 py660,
-River Lewis,
+rivques,
 Samuel Cottrell,
 Samuel Fernandez,
 Saran Wagner,
