Added Anki link, also credit another friend I forgot to credit earlier

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 </ol>
 <p>To avoid that for <em>this</em> guide, I've included some <em>OPTIONAL</em> interactive flashcards! They use &quot;Spaced Repetition&quot;, an easy-ish, evidence-backed way to &quot;make long-term memory a choice&quot;. (<a href="#SpacedRepetition">:click here to learn more about Spaced Repetition!</a>)</p>
 <p>Here: <strong>try the below flashcards, to retain what you just learnt!</strong></p>
-<p>(There's an optional sign-up at the end, <em>if</em> you want to save these cards for long-term study. Note: <em>I do not own or control this app</em>, it's third-party.<!--If you'd rather use the open source flashcard app [Anki](https://apps.ankiweb.net/index.html), **here's [a downloadable Anki deck](https://ankiweb.net/shared/info/341999410)**!-->)</p>
+<p>(There's an optional sign-up at the end, <em>if</em> you want to save these cards for long-term study. Note: <em>I do not own or control this app</em>, it's third-party. If you'd rather use the open source flashcard app <a href="https://apps.ankiweb.net/index.html">Anki</a>, <strong>here's <a href="https://ankiweb.net/shared/info/341999410">a downloadable Anki deck</a></strong>!)</p>
 <p>(Also, you don't need to memorize the answers <em>exactly</em>, just the gist. You be the judge if you got it &quot;close enough&quot;.)</p>
 <orbit-reviewarea color="violet">
     <orbit-prompt
@@ -432,9 +432,9 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 <p>I present to you, a <a href="https://xkcd.com/2278/">relevant xkcd</a>:</p>
 <p><img src="media/intro/xkcd.png" alt="Comic. Megan &amp; Cueball show White Hat a graph of a line going up, not yet at, but heading towards, a threshold labelled &quot;BAD&quot;. White Hat: &quot;So things will be bad?&quot; Megan: &quot;Unless someone stops it.&quot; White Hat: &quot;Will someone do that?&quot; Megan: &quot;We don't know, that's why we're showing you.&quot; White Hat: &quot;Well, let me know if that happens!&quot; Megan: &quot;Based on this conversation, it already has.&quot;"></p>
 <p>This is how I feel about &quot;don't worry about AI, it can't even do [X]&quot;.</p>
-<p>Is our postmodern memory-span <em>that</em> bad? <em>One</em> decade ago, just <em>one</em>, the world's state-of-the-art AIs couldn't even <em>recognize pictures of cats.</em> Now, not <em>only</em> can AI do that at human-performance level, AIs can pump out <a href="#CatNinja">:a picture of a cat-ninja slicing a watermelon in the style of Vincent Van Gogh</a> in <em>under a minute</em>.</p>
+<p>Is our postmodern memory-span <em>that</em> bad? <em>One</em> decade ago, just <em>one</em>, the world's state-of-the-art AIs couldn't reliably <em>recognize pictures of cats.</em> Now, not <em>only</em> can AI do that at human-performance level, AIs can pump out <a href="#CatNinja">:a picture of a cat-ninja slicing a watermelon in the style of Vincent Van Gogh</a> in <em>under a minute</em>.</p>
 <p>Is <em>current</em> AI a huge threat to our jobs, or safety? No. (Well, besides the aforementioned deepfake scams.)</p>
-<p>But: if AI keeps improving at the same rate as it has been for the last decade... it seems plausible to me we could get &quot;Einstein/Oppenheimer-level&quot; AI in 30 years.<sup class="footnote-ref"><a href="#fn35" id="fnref35">[35]</a></sup> That's well within many folks' lifetimes!</p>
+<p>But: if AI keeps improving at a similar rate as it has for the last decade... it seems plausible to me we could get &quot;Einstein/Oppenheimer-level&quot; AI in 30 years.<sup class="footnote-ref"><a href="#fn35" id="fnref35">[35]</a></sup> That's well within many folks' lifetimes!</p>
 <p>As &quot;they&quot; say:<sup class="footnote-ref"><a href="#fn36" id="fnref36">[36]</a></sup></p>
 <blockquote>
 <p>The best time to plant a tree was 30 years ago. The second best time is today.</p>
@@ -495,7 +495,7 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 </ul>
 </li>
 </ul>
-<p>(To review the flashcards, click the <img src="media/intro/icon1.png" class="inline-icon"/> Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links.<!--Alternatively, download the [Anki deck for the Intro](https://ankiweb.net/shared/info/341999410).-->)</p>
+<p>(To review the flashcards, click the <img src="media/intro/icon1.png" class="inline-icon"/> Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links. Alternatively, download the <a href="https://ankiweb.net/shared/info/341999410">Anki deck for the Intro</a>.)</p>
 <p>Finally! Now that we've taken the 10,000-foot view, let's get hiking on our whirlwind tour of AI Safety... for us warm, normal, fleshy humans!</p>
 <p><strong>Click to continue ⤵</strong></p>
 <p><a
@@ -773,6 +773,7 @@ Also thank you to these non-teenagers for giving feedback:
 </p>
 
 <blockquote>
+Alex Kreitzberg,
 B Cavello,
 Paul Dancstep,
 Tobias Rose-Stockwell
