--- a/p1/index.html
+++ b/p1/index.html
@@ -359,7 +359,7 @@
 <hr>
 <h3>🤔 Review #1 (OPTIONAL!)</h3>
 <p>Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an <em>optional</em> flashcard review for you!</p>
-<p>(<a href="../#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>.<!--Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](https://ankiweb.net/shared/info/219158432)-->)</p>
+<p>(<a href="../#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>. Alternatively, use <a href="https://apps.ankiweb.net/">Anki</a> and get <a href="https://ankiweb.net/shared/info/219158432">Part One's cards as an Anki deck</a>)</p>
 <orbit-reviewarea color="violet">
     <orbit-prompt
         question="Who's widely considered the founder of Computer Science & Artificial Intelligence?"
@@ -986,7 +986,7 @@ All fascinating research directions, but none of them are the clear winner, yet.
 <p>Fine. My suspicion is that biologically-inspired AI is the right path; it's worked so far, with ANNs &amp; convolution (inspired by mammalian visual cortices).</p>
 <p>But, counter-argument: some of the most important discoveries in Deep Learning (DL), like backpropagation, are completely biologically implausible.</p>
 <p>My counter-counter-intuition: Yes, <em>that's what's holding Deep Learning back.</em> So many recent advances in DL are basically <em>getting around</em> the problems with backpropagation: ResNets, ReLU, Transformers, etc. The human cortex has only 6 layers of neurons. GPT-4 has <em>120 layers</em> of neurons, and requires more training data than a human could see in thousands of lifetimes.</p>
-<p>So, my <em>current</em> mental model of AI, is that our main bottleneck isn't scale. (Also see the Scaling section for why I'm skeptical on scale.) Our main bottleneck is <em>not understanding how human brains work.</em></p>
+<p>So, my <em>current</em> mental model of AI, is that our main bottleneck is <em>not</em> scale. (Also see the Scaling section for why I'm skeptical on scale.) Our main bottleneck is <em>not understanding how human brains work.</em></p>
 <p>But compared to big mysteries like, &quot;how does the brain make consciousness&quot; or &quot;why do we sleep &amp; dream&quot;... I suspect this &quot;only&quot; requires solving smaller mysteries like, &quot;how do neurons learn, even when the reward is very far away&quot; or, &quot;how do we even recognize the difference between 'red square, yellow triangle' and 'yellow square, red triangle'? (Surprisingly, both of these have still been unsolved for decades!)</p>
 <p>I reckon once we solve <em>those</em> mysteries, we can &quot;just&quot; simplify &amp; simulate them in computers — like we did with McColloch &amp; Pitts's neurons — and voilà, we'll get &quot;AGI&quot;.</p>
 <p>So <em>when</em> will we solve those &quot;small&quot; mysteries, with our regular science?</p>
@@ -1154,7 +1154,7 @@ All fascinating research directions, but none of them are the clear winner, yet.
 <li>Folks concerned about risks ranging from &quot;bad&quot; to &quot;existential&quot;, and from &quot;AI <em>accidentally</em> goes rogue on humans&quot; to &quot;AI <em>intentionally</em> misused by rogue humans&quot;.</li>
 </ul>
 <p><strong>4)</strong> 🤷 Experts wildly disagree on <em>everything</em> about the future of AI: When we'll get AGI, how fast AGI would self-improve, whether our trajectory is towards a good or bad place.</p>
-<p>(If you skipped the flashcards &amp; would like to review them now, click the Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links.<!--Alternatively, download the [Anki deck for Part One](https://ankiweb.net/shared/info/219158432).-->)</p>
+<p>(If you skipped the flashcards &amp; would like to review them now, click the Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links. Alternatively, download the <a href="https://ankiweb.net/shared/info/219158432">Anki deck for Part One</a>.)</p>
 <hr>
 <p><em>Can we control what we've made?</em></p>
 <p>As they say, &quot;a problem well-stated is a problem half-solved&quot;.<sup class="footnote-ref"><a href="#fn72" id="fnref72">[72]</a></sup></p>
@@ -1439,6 +1439,7 @@ Also thank you to these non-teenagers for giving feedback:
 </p>
 
 <blockquote>
+Alex Kreitzberg,
 B Cavello,
 Paul Dancstep,
 Tobias Rose-Stockwell
