AI SAFETY PART TWO

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <div id="splash_image">
 
             
+            
 
             <div id="crt_lines"></div>
             <div id="static"></div>
@@ -170,9 +171,8 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING JULY 2024, probably"
-                onclick="alert('COMING JULY 2024, probably')">
+            <a target="_self" href="p2"
+                class="live">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 2<br>problems
@@ -183,8 +183,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING OCT 2024, probably"
-                onclick="alert('COMING OCT 2024, probably')">
+                title="COMING HALLOWEEN 2024, probably"
+                onclick="alert('COMING HALLOWEEN 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -195,8 +195,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING OCT 2024, probably"
-                onclick="alert('COMING OCT 2024, probably')">
+                title="COMING HALLOWEEN 2024, probably"
+                onclick="alert('COMING HALLOWEEN 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
@@ -241,7 +241,7 @@
 <p>This series will also have comics starring a Robot Catboy Maid. Like so:</p>
 <p><img src="media/intro/Outer_Alignment.png" alt="Comic. Ham the Human tells RCM (Robot Catboy Maid) to &quot;keep this hosue clean&quot;. RCM reasons: What causes the mess? The humans cause the mess! Therefore: GET RID OF THE HUMANS. RCM then yeets Ham out of the house."></p>
 <p><code>[tour guide voice]</code> And to your right 👉, you'll see buttons for <img src="media/intro/icon1.png" class="inline-icon"/> the Table of Contents, <img src="media/intro/icon2.png" class="inline-icon"/> changing this webpage's style, and <img src="media/intro/icon3.png" class="inline-icon"/> a reading-time-remaining clock.</p>
-<p>This series was first published on <strong>May 2024.</strong> Intro &amp; Part One are out, Part Two &amp; Three will be in a few months. OPTIONAL: If you'd like to be notified on their release, signup below!👇 You <em>will not</em> be spammed with other stuff, just the two notification emails. (Buuuuut, <code>[podcast sponsor voice]</code> if you're in high school or earlier, and interested in AI/code/engineering, consider checking the box to learn more about <a href="https://hackclub.com/">Hack Club!</a> P.S: There's free <em>stickers~~~</em> ✨)</p>
+<p>This series was first published on <strong>May 2024.</strong> Intro, Part 1, and Part 2 are out, Part Three will be on Halloween 2024. OPTIONAL: If you'd like to be notified on their release, signup below!👇 You <em>will not</em> be spammed with other stuff, just the two notification emails. (Buuuuut, <code>[podcast sponsor voice]</code> if you're in high school or earlier, and interested in AI/code/engineering, consider checking the box to learn more about <a href="https://hackclub.com/">Hack Club!</a> P.S: There's free <em>stickers~~~</em> ✨)</p>
 <p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
 <script defer src="https://server.fillout.com/embed/v1/"></script></p>
 <p>Anyway, <code>[tour guide voice again]</code> before we hike through the rocky terrain of AI &amp; AI Safety, let's take a 10,000-foot look of the land:</p>
@@ -587,7 +587,7 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 <li>The same way a CEO can affect the world from their air-conditioned office: move money around. An AI could just <em>pay</em> people to do stuff for it.</li>
 <li>Hack into people's private devices &amp; data, then blackmail them into doing stuff for it. (Like in <em>the</em> bleakest Black Mirror episode, <a href="https://en.wikipedia.org/wiki/Shut_Up_and_Dance_%28Black_Mirror%29"><em>Shut Up And Dance</em></a>.)</li>
 <li>Hacking autonomous drones/quadcopters. I'm honestly surprised nobody's committed a murder with a recreational quadcopter yet, like, by flying it into highway traffic, or into a jet's engine during takeoff/landing.</li>
-<li>An AI could persuade/bribe/blackmail a CEO or politician to manufacture a <em>lot</em> of physical robots — (for the supposed purpose of manual labor, military warfare, search-and-rescue missions, delivery drones, lab work, a Robot Catboy Maid, etc) — then the AI hacks <em>those</em> robots, and uses them to affect the physical world.</li>
+<li>An AI could persuade/bribe/blackmail a CEO or politician to manufacture a <em>lot</em> physical robots — (for the supposed purpose of manual labor, military warfare, search-and-rescue missions, delivery drones, lab work, a Robot Catboy Maid, etc) — then the AI hacks <em>those</em> robots, and uses them to affect the physical world.</li>
 </ul>
 <h4>:x XZ</h4>
 <p>Two months ago [March 2024], a <em>volunteer, off-the-clock</em> developer found a malicious backdoor in a major piece of code... which was <em>three years</em> in the making, <em>mere weeks away</em> from going live, and would've attacked the vast majority of internet servers... and this volunteer only caught it <em>by accident</em>, when he noticed that his code was running <em>half a second too slow.</em></p>
@@ -721,7 +721,7 @@ Also, Nicky has a
 &
 <a href="https://ko-fi.com/nickycase">Ko-Fi</a>.
 (p.s:
-<a href="signup/supporters-p1.html">thank-you page for my supporters!</a>)
+<a href="signup/supporters-p2.html">thank-you page for my supporters!</a>)
 </p>
 <p style="text-align:center">
 . . .
@@ -733,6 +733,8 @@ beta-reading & giving feedback on this piece:
 </p>
 <blockquote>
 
+<p>
+<b>Intro & Part 1:</b>
 Arthur Beck,
 Atharv Gupta,
 Brendan Lee,
@@ -762,6 +764,16 @@ Saran Wagner,
 Skyler Grey,
 S&nbsp;P&nbsp;U&nbsp;N&nbsp;G&nbsp;E,
 Vihaan Sondhi
+</p>
+
+<p>
+<b>Part 2:</b>
+Nanda White,
+Nila Palmo Ram,
+rivques,
+Rohan K,
+Samuel Fernandez
+</p>
 
 </blockquote>
 <p>
@@ -770,10 +782,22 @@ Also thank you to these non-teenagers for giving feedback:
 </p>
 
 <blockquote>
+<p>
+<b>Intro & Part 1:</b>
 Alex Kreitzberg,
 B Cavello,
 Paul Dancstep,
 Tobias Rose-Stockwell
+</p>
+
+<p>
+<b>Part 2:</b>
+Egg Syntax,
+Max Wofford,
+Mithuna Yoganathan,
+Tobias Rose-Stockwell
+</p>
+
 </blockquote>
 
 <p>
