Update intro and new thumbnail

--- a/p2/index.html
+++ b/p2/index.html
@@ -397,6 +397,7 @@ will be pushed to extreme values.</p>
 <p>For example: if I saw a grease fire, and I <em>want</em> a bucket of water, because I mistakenly think water is good for grease fires, and I order Robot Catboy Maid to get me a bucket of water... RCM should instead fetch a fire extinguisher, since that's what <em>I would have wanted</em> if I knew the outcomes in advance. (PSA: don't pour water on grease fires, it'll explode.)</p>
 <p>This example complicates AI Safety: it shows that sometimes, we actually <em>want</em> our AIs to disobey our orders, <em>for our own good!</em></p>
 <h3>🤔 Review #2</h3>
+<p><em>(Again, 100% OPTIONAL.)</em></p>
 <orbit-reviewarea color="violet">
 (ORBIT CARDS HERE)
     <orbit-prompt
