--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
         <div id="splash_image">
 
             
-            
 
             <div id="crt_lines"></div>
             <div id="static"></div>
@@ -173,7 +172,7 @@
             </a>
             <a target="_self" href="p2"
                 class="live">
-                <div>
+                <div  >
                     <span class='chapter-nav-desktop'>
                         part 2<br>problems
                     </span>
@@ -183,8 +182,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING OCT 2024, probably"
+                onclick="alert('COMING OCT 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -195,8 +194,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING OCT 2024, probably"
+                onclick="alert('COMING OCT 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
