fixd missing header

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <div id="splash_image">
 
             
+            
 
             <div id="crt_lines"></div>
             <div id="static"></div>
@@ -182,8 +183,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING OCT 2024, probably"
-                onclick="alert('COMING OCT 2024, probably')">
+                title="COMING HALLOWEEN 2024, probably"
+                onclick="alert('COMING HALLOWEEN 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -194,8 +195,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING OCT 2024, probably"
-                onclick="alert('COMING OCT 2024, probably')">
+                title="COMING HALLOWEEN 2024, probably"
+                onclick="alert('COMING HALLOWEEN 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
