--- a/p2/index.html
+++ b/p2/index.html
@@ -236,7 +236,7 @@
 <p><em>&quot;Didn't you use that quote just a few minutes ago?&quot;</em> you ask. Nah, <a href="https://aisafety.dance/p1/">part one</a> was published in May 2024, this part was published <strong>Aug 2024</strong>. It's been three months, I'll remind you of the quote.</p>
 <p>I'll also remind you of the problem we're trying to state &amp; solve! It is the Value Alignment Problem:</p>
 <blockquote>
-<p><strong><em>How can make AIs that robustly serve humane values?</em></strong></p>
+<p><strong><em>How can we make AIs that robustly serve humane values?</em></strong></p>
 </blockquote>
 <p>As elaborated in Part One, we can break this problem up like so:</p>
 <p><img src="../media/p2/breakdown/breakdown0001.png" alt="Diagram breaking down the Value Alignment Problem. It can be broken into &quot;Technical Alignment&quot; and &quot;Humane Values&quot;. Technical Alignment, in turn, can be broken into &quot;Problems with AI Logic&quot; and &quot;Problems with AI Intuition&quot;"></p>
