--- a/p2/index.html
+++ b/p2/index.html
@@ -181,8 +181,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -193,8 +193,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
@@ -265,7 +265,7 @@
 <p><em>&quot;Be careful what you wish for, you just may get it.&quot;</em> It's a problem so old, it's enshrined in myth: King Midas, ironic genies, the Monkey's Paw.</p>
 <p>This is called <strong>Goal Mis-specification</strong> (also called Reward Mis-specification): When an AI does <em>exactly what you asked for</em>, not necessarily <em>what you actually wanted.</em></p>
 <p>(If you forgot from Part One, here's how <a href="#WaysToMakeHumaneAIGoingWrong">:seemingly-obvious ways to make &quot;humane AI&quot; can go wrong</a>. Bonus: <a href="#StoryOfPassivePredictionLeadingToHarm">:even <em>passive</em> goals like &quot;predict something&quot; can lead to harmful results!</a> 👈 <em>OPTIONAL: Click to expand these texts!</em>)</p>
-<p><em>(Also — if you'd like to be notified when Part 3: The Proposed Solutions is out, around Halloween, sign up below! If you're a high-schooler you can also get free stickers 👇)</em></p>
+<p><em>(Also — if you'd like to be notified when Part 3: The Proposed Solutions is out, in mid-December, sign up below! If you're a high-schooler you can also get free stickers 👇)</em></p>
 <p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
 <script defer src="https://server.fillout.com/embed/v1/"></script></p>
 <p>. . .</p>
@@ -1052,7 +1052,7 @@ b) Selects future outcomes based on <em>CURRENT</em> goals,</p>
 <p>. . .</p>
 <p><em>&quot;A problem well-stated is a problem half-solved.&quot;</em></p>
 <p>The other half is, well, solving it.</p>
-<p>After two long chapters, finally, we can understand the top proposed solutions to <em>every</em> sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming <strong>Halloween 2024!</strong> 🎃</p>
+<p>After two long chapters, finally, we can understand the top proposed solutions to <em>every</em> sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming <strong>December 2024!</strong></p>
 <p>Sign up to be notified when the final part is out: 👇</p>
 <p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
 <script defer src="https://server.fillout.com/embed/v1/"></script></p>
