--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -195,8 +195,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
@@ -241,7 +241,7 @@
 <p>This series will also have comics starring a Robot Catboy Maid. Like so:</p>
 <p><img src="media/intro/Outer_Alignment.png" alt="Comic. Ham the Human tells RCM (Robot Catboy Maid) to &quot;keep this hosue clean&quot;. RCM reasons: What causes the mess? The humans cause the mess! Therefore: GET RID OF THE HUMANS. RCM then yeets Ham out of the house."></p>
 <p><code>[tour guide voice]</code> And to your right 👉, you'll see buttons for <img src="media/intro/icon1.png" class="inline-icon"/> the Table of Contents, <img src="media/intro/icon2.png" class="inline-icon"/> changing this webpage's style, and <img src="media/intro/icon3.png" class="inline-icon"/> a reading-time-remaining clock.</p>
-<p>For this series, the Intro &amp; Part 1 were published on <strong>May 2024</strong>, Part 2 is out now on <strong>Aug 2024</strong>, and Part Three will be out on <strong>Halloween 2024</strong>. OPTIONAL: If you'd like to be notified on their release, signup below!👇 You <em>will not</em> be spammed with other stuff, just the two notification emails. (Buuuuut, <code>[podcast sponsor voice]</code> if you're in high school or earlier, and interested in AI/code/engineering, consider checking the box to learn more about <a href="https://hackclub.com/">Hack Club!</a> P.S: There's free <em>stickers~~~</em> ✨)</p>
+<p>For this series, the Intro &amp; Part 1 were published on <strong>May 2024</strong>, Part 2 is out now on <strong>Aug 2024</strong>, and Part Three will be out on <strong>Dec 2024</strong>. OPTIONAL: If you'd like to be notified on their release, signup below!👇 You <em>will not</em> be spammed with other stuff, just the two notification emails. (Buuuuut, <code>[podcast sponsor voice]</code> if you're in high school or earlier, and interested in AI/code/engineering, consider checking the box to learn more about <a href="https://hackclub.com/">Hack Club!</a> P.S: There's free <em>stickers~~~</em> ✨)</p>
 <p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
 <script defer src="https://server.fillout.com/embed/v1/"></script></p>
 <p>Anyway, <code>[tour guide voice again]</code> before we hike through the rocky terrain of AI &amp; AI Safety, let's take a 10,000-foot look of the land:</p>
