--- a/p1/index.html
+++ b/p1/index.html
@@ -181,8 +181,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -193,8 +193,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
