FIXES FOR INTRO and P1 and P2

--- a/p3-secret/index.html
+++ b/p3-secret/index.html
@@ -179,8 +179,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING MID-DECEMBER 2024, probably"
-                onclick="alert('COMING MID-DECEMBER 2024, probably')">
+                title="COMING END OF NOVEMBER 2025"
+                onclick="alert('COMING END OF NOVEMBER 2025')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -191,8 +191,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING MID-DECEMBER 2024, probably"
-                onclick="alert('COMING MID-DECEMBER 2024, probably')">
+                title="COMING END OF NOVEMBER 2025"
+                onclick="alert('COMING END OF NOVEMBER 2025')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
