--- a/conclusion/index.html
+++ b/conclusion/index.html
@@ -5,14 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Safety for Fleshy Humans: THE GRAND CINEMATIC CONCLUSION</title>
 
-    <!-- TODO: FAVICON -->
+    <!-- Links are external by default -->
+    <base target="_blank">
+
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="../favicon.png">
 
     <!-- STYLES -->
 	<link rel="stylesheet" href="../styles/Merriweather/merriweather.css">
     <link rel="stylesheet" href="conclusion.css">
 
+    <!-- Hack Club's no-cookies, GDPR-compliant analytics -->
+    <script defer data-domain="aisafety.dance" src="https://plausible.io/js/script.js"></script>
+
 </head>
 <body>
+    <div id="scroll_arrow">
+        <span style="font-size: 18px;">(scroll)</span><br>
+        <span style="font-size: 90px;">↓</span>
+    </div>
     <div id="splash_image" style="top: 0px;">
         <div id="crt_lines" style="background-position-y: 2230px;"></div>
         <div id="static" style="background-position-y: 66805px;"></div>
@@ -20,8 +31,6 @@
     <div class="container">
 
         <div style="height:300px"></div>
-
-        <!-- TODO: anim, scroll DOWN -->
 
         <!-- The Fork -->
         <div class="glitchy" style="height:700px">
@@ -83,7 +92,7 @@
             <br>
             reading this series!
             <br>
-            <span style="font-size: 20px;">(<i>three hours worth</i> of text!!!)</span>
+            <span style="font-size: 20px;">(<i>four hours worth</i> of text!!!)</span>
         </div>
         <div style="height:600px; position:relative; line-height:1.5em;">
             <div style="width:350px; float:left; text-align:right;">
@@ -191,11 +200,28 @@
         </div>
         <div style="height:800px; font-size: 40px;">
             <span class="glitchy" style="line-height: 1.2em;display: block;">
-                THANK YOU TO THESE PEOPLE FOR THEIR FEEDBACK:
+                SPECIAL THANKS TO THESE FOLKS FOR THEIR FEEDBACK
+                & ENCOURAGING ME TO FINISH THIS DANG THING:
             </span>
-            <div style="background:rgba(0,0,0,0.5); color:#fff; font-size:15px;line-height: 1.5em;padding: 30px;/*! margin-top: 20px; */width: 600px;margin: 20px auto;">
-                name name name name name name name name name name name name name name name
-                name name name name name name name name name name name name name name name
+            <div style="background:rgba(0,0,0,0.5); color: #fff;
+                      font-size: 21px;
+                      line-height: 1.6em;
+                      padding: 15px;
+                      margin-top: 20px;
+                      width: 600px;
+                      margin: 20px auto;">
+                Alex Kreitzberg &middot;
+                Audrey Tang &middot;
+                B Cavello &middot;
+                Egg Syntax &middot;
+                Gisele Chou &middot;
+                Lexi Mattick &middot;
+                Max Wofford &middot;
+                Mithuna Yoganathan &middot;
+                Paul Dancstep &middot;
+                Tim Urban &middot;
+                Tobias Rose-Stockwell &middot;
+                Zach Latta
             </div>
         </div>
         <div class="glitchy" style="height:600px;">
@@ -203,14 +229,59 @@
             <span style="display: block;margin-bottom: 64px;font-size: 250px;font-weight: bold;">YOU</span>
             <span style="display: block;margin-bottom: -11px;font-size: 40px;">FOR READING!</span>
         </div>
-        <div style="height:1200px"></div>
+        <div style="height:900px"></div>
 
-        <div style="background:#222; font-size:18px; width:100%; height:800px;">
-            // TODO: Black to grey gradient.
-            // links
-            // subscribe to NCASE, HACK CLUB, LTFF,
-            more resources on AI Safety Rob Miles / 80k Hours
-            // Patreon & Ko-Fi links, too!
+        <div style="font-size:18px; width:100%; line-height: 1.8em;
+                    background-color: #222;
+                    background-image: linear-gradient(to bottom, black, #222);
+                    background-size: 100% 500px;
+                    background-repeat: no-repeat;">
+            <div style="width:640px; margin:0 auto; width: 640px; padding: 400px 0 100px 0;">
+                Welp, that's the end of <i>this</i> ridiculously long series!
+                I'll still do more AI Safety/Governance explainers (& original research!)
+                in the near future. To keep up on that, let's skip the social media feeds —<br>
+                subscribe to
+                <a href="https://www.youtube.com/@itsnickycase">my YouTube</a> or my monthly newsletter! ⤵
+                <br><br>
+                <iframe src="https://ncase.me/ncase-credits/signup2.html" frameborder="no" width="640" height="250"></iframe>
+                <br><br>
+                You could also help me pay food & rent in this economy, no pressure:
+                <br><br>
+                <iframe src="https://ncase.me/ncase-credits/supporters/oct-2025.html" frameborder="no" width="640" height="640"></iframe>
+                <br><br>
+                If you'd like to learn more about AI Safety & Governance,
+                I recommend checking out the YouTube channels
+                <a href="https://www.youtube.com/@RationalAnimations">Rational Animations</a> &
+                <a href="https://www.youtube.com/@RobertMilesAI">Rob Miles</a>.
+                For deeper dives, check out Stuart Russell's book
+                <a href="https://www.penguinrandomhouse.ca/books/566677/human-compatible-by-stuart-russell/9780525558637">Human Compatible</a>,
+                or sign up for
+                <a href="https://bluedot.org/">BlueDot's courses</a>.
+                To learn about the math behind modern neural networks,
+                <a href="https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi">watch 3Blue1Brown's YouTube series</a>.
+                <br><br>
+                Or, you know, check out the sources from<br>the 200+ footnotes I put in this series.
+                <br><br>
+                If you're a teen hacker & would like to learn and create with other
+                teen hackers, check out
+                <a href="https://hackclub.com/">🦕 Hack Club</a>!
+                They're doing a
+                <a href="https://midnight.hackclub.com/">🕵️ murder mystery hackathon‍</a>
+                in Vienna in Jan 2026, and an
+                <a href="https://campfire.hackclub.com/">🔥 international game jam</a>
+                in Feb 2026.
+                And if you sign up for their newsletter below, you can get free AI Safety for Fleshy Humans stickers: ⤵
+                <br><br>
+                (TODO)
+                <br><br>
+                To learn more about / get funding for / donate to "stuff that reduces the chance
+                some horrible civilization-level catastrophe happens this century",
+                check out the
+                <a href="https://funds.effectivealtruism.org/funds/far-future">🔮 Long-Term Future Fund</a>.
+                <br><br>
+                Stay humane, cats & kittens!<br>
+                ~ Nicky Case
+            </div>
         </div>
 
     </div>
